[gd_scene load_steps=10 format=2]

[ext_resource path="res://Models/Objects/Button/texButton.png" type="Texture" id=1]
[ext_resource path="res://Sounds/SFX/sfxButton.ogg" type="AudioStream" id=2]
[ext_resource path="res://Models/Objects/Button/matButton.material" type="Material" id=3]
[ext_resource path="res://Shaders/shrPSX.shader" type="Shader" id=4]
[ext_resource path="res://Scripts/scrButton.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 1.5, 2 )

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -0.001, -0.001, 0, 0.002, 0.002, 0.011 ),
"array_data": PoolByteArray( 112, 18, 131, 186, 112, 18, 131, 186, 0, 0, 0, 0, 129, 0, 0, 0, 0, 127, 0, 127, 112, 56, 0, 60, 112, 18, 131, 186, 112, 18, 131, 186, 87, 57, 52, 60, 129, 0, 0, 0, 0, 127, 0, 127, 112, 56, 80, 58, 112, 18, 131, 186, 112, 18, 131, 58, 87, 57, 52, 60, 129, 0, 0, 0, 0, 127, 0, 127, 224, 56, 80, 58, 112, 18, 131, 186, 112, 18, 131, 58, 0, 0, 0, 0, 129, 0, 0, 0, 0, 127, 0, 127, 224, 56, 0, 60, 112, 18, 131, 186, 112, 18, 131, 58, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 129, 127, 160, 57, 160, 54, 112, 18, 131, 186, 112, 18, 131, 58, 87, 57, 52, 60, 0, 127, 0, 0, 0, 0, 129, 127, 0, 56, 160, 54, 112, 18, 131, 58, 112, 18, 131, 58, 9, 215, 35, 60, 0, 127, 0, 0, 0, 0, 129, 127, 0, 56, 224, 53, 112, 18, 131, 58, 112, 18, 131, 58, 0, 0, 0, 0, 0, 127, 0, 0, 0, 0, 129, 127, 160, 57, 224, 53, 112, 18, 131, 58, 112, 18, 131, 58, 0, 0, 0, 0, 127, 0, 0, 0, 0, 129, 0, 127, 112, 56, 80, 58, 112, 18, 131, 58, 112, 18, 131, 58, 9, 215, 35, 60, 127, 0, 0, 0, 0, 129, 0, 127, 112, 56, 176, 56, 112, 18, 131, 58, 112, 18, 131, 186, 9, 215, 35, 60, 127, 0, 0, 0, 0, 129, 0, 127, 224, 56, 176, 56, 112, 18, 131, 58, 112, 18, 131, 186, 0, 0, 0, 0, 127, 0, 0, 0, 0, 129, 0, 127, 224, 56, 80, 58, 112, 18, 131, 58, 112, 18, 131, 186, 0, 0, 0, 0, 0, 129, 0, 0, 0, 0, 129, 127, 160, 57, 224, 53, 112, 18, 131, 58, 112, 18, 131, 186, 9, 215, 35, 60, 0, 129, 0, 0, 0, 0, 129, 127, 0, 56, 224, 53, 112, 18, 131, 186, 112, 18, 131, 186, 87, 57, 52, 60, 0, 129, 0, 0, 0, 0, 129, 127, 0, 56, 0, 53, 112, 18, 131, 186, 112, 18, 131, 186, 0, 0, 0, 0, 0, 129, 0, 0, 0, 0, 129, 127, 160, 57, 0, 53, 52, 128, 55, 186, 46, 128, 55, 186, 88, 57, 52, 60, 56, 0, 113, 0, 113, 0, 200, 127, 208, 56, 112, 56, 52, 128, 55, 58, 45, 128, 55, 186, 84, 193, 40, 60, 56, 0, 113, 0, 113, 0, 200, 127, 32, 57, 112, 56, 52, 128, 55, 58, 51, 128, 55, 58, 84, 193, 40, 60, 56, 0, 113, 0, 113, 0, 200, 127, 32, 57, 176, 56, 52, 128, 55, 186, 51, 128, 55, 58, 88, 57, 52, 60, 56, 0, 113, 0, 113, 0, 200, 127, 208, 56, 176, 56, 112, 18, 131, 58, 112, 18, 131, 58, 9, 215, 35, 60, 56, 0, 113, 0, 143, 0, 56, 127, 112, 56, 80, 56, 112, 18, 131, 186, 112, 18, 131, 58, 87, 57, 52, 60, 56, 0, 113, 0, 143, 0, 56, 127, 208, 56, 80, 56, 112, 18, 131, 186, 112, 18, 131, 186, 87, 57, 52, 60, 56, 0, 113, 0, 143, 0, 56, 127, 208, 56, 176, 56, 112, 18, 131, 58, 112, 18, 131, 186, 9, 215, 35, 60, 56, 0, 113, 0, 143, 0, 56, 127, 112, 56, 176, 56 ),
"array_index_data": PoolByteArray( 3, 0, 1, 0, 0, 0, 3, 0, 2, 0, 1, 0, 7, 0, 5, 0, 4, 0, 7, 0, 6, 0, 5, 0, 11, 0, 9, 0, 8, 0, 11, 0, 10, 0, 9, 0, 15, 0, 13, 0, 12, 0, 15, 0, 14, 0, 13, 0, 19, 0, 17, 0, 16, 0, 19, 0, 18, 0, 17, 0, 23, 0, 21, 0, 20, 0, 23, 0, 22, 0, 21, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 36,
"material": ExtResource( 3 ),
"name": "Cube.003",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/specular_intensity = 0.0
shader_param/vertex_resolution = 256.0
shader_param/cull_distance = 100.0
shader_param/uv_scale = Vector2( 1, 1 )
shader_param/uv_offset = Vector2( 0, 0 )
shader_param/uv_speed = Vector2( 0, -1 )
shader_param/affine_texture_mapping = true
shader_param/emissive = false
shader_param/moving_uv = false
shader_param/double_sided = false
shader_param/stippled_transparent = false
shader_param/albedoTex = ExtResource( 1 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -0.001, 0.001, 0, -0.001, -0.001, 0.011, -0.001, -0.001, 0, -0.001, 0.001, 0, -0.001, 0.001, 0.011, -0.001, -0.001, 0.011, 0.001, 0.001, 0, -0.001, 0.001, 0.011, -0.001, 0.001, 0, 0.001, 0.001, 0, 0.001, 0.001, 0.01, -0.001, 0.001, 0.011, 0.001, -0.001, 0, 0.001, 0.001, 0.01, 0.001, 0.001, 0, 0.001, -0.001, 0, 0.001, -0.001, 0.01, 0.001, 0.001, 0.01, -0.001, -0.001, 0, 0.001, -0.001, 0.01, 0.001, -0.001, 0, -0.001, -0.001, 0, -0.001, -0.001, 0.011, 0.001, -0.001, 0.01, -0.0007, 0.0007, 0.011, 0.0007, -0.0007, 0.0103, -0.0007, -0.0007, 0.011, -0.0007, 0.0007, 0.011, 0.0007, 0.0007, 0.0103, 0.0007, -0.0007, 0.0103, 0.001, -0.001, 0.01, -0.001, 0.001, 0.011, 0.001, 0.001, 0.01, 0.001, -0.001, 0.01, -0.001, -0.001, 0.011, -0.001, 0.001, 0.011 )

[node name="oButton" type="Area" groups=[
"Buttom",
]]
script = ExtResource( 6 )

[node name="buttonCol" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53846, 0 )
shape = SubResource( 1 )

[node name="buttonMdlDesactivated" type="MeshInstance" parent="."]
transform = Transform( 100, 0, 0, 0, -1.19209e-05, 100, 0, -100, -1.19209e-05, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="buttonMdlDesactivated"]

[node name="CollisionShape" type="CollisionShape" parent="buttonMdlDesactivated/StaticBody"]
shape = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="buttonMdlDesactivated"]
transform = Transform( 0.01, 0, 0, 0, 0.01, -3.10862e-15, 0, 3.10862e-15, 0.01, 0, -1.47336e-09, 0.0123593 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.8
omni_range = 8.0

[node name="buttonMdlActivated" type="MeshInstance" parent="."]
transform = Transform( 100, 0, 0, 0, -1.19209e-05, 100, 0, -100, -1.19209e-05, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="buttonMdlActivated"]

[node name="CollisionShape" type="CollisionShape" parent="buttonMdlActivated/StaticBody"]
shape = SubResource( 4 )

[node name="OmniLight2" type="OmniLight" parent="buttonMdlActivated"]
transform = Transform( 0.01, 0, 0, 0, 0.01, -3.10862e-15, 0, 3.10862e-15, 0.01, 0, -1.47336e-09, 0.0123593 )
light_color = Color( 0, 1, 0, 1 )
light_energy = 0.8
omni_range = 8.0

[node name="buttonSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1.53846, 0, 0, 0, 1.53846, 0, 0, 0, 1.53846, 0, 3.13493, 0 )
stream = ExtResource( 2 )
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_oButtom_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_oButtom_body_exited"]
